@startuml

title __BOUNDING's Class Diagram__\n

  package world {
    package world.bounding {
      class AABBProperties {
          # x : float
          # y : float
          # z : float
          + AABBProperties()
          + draw()
          + encloses()
          + encloses()
          + intersects()
          + getVertices()
          + getFrontBound()
          + getBackBound()
          + getLeftBound()
          + getRightBound()
          + getTopBound()
          + getBottomBound()
          + getX()
          + getY()
          + getZ()
          + getType()
          + toString()
      }
    }
  }
  

  package world {
    package world.bounding {
      class Bounding {
          + Bounding()
          + draw()
          + encloses()
          + encloses()
          + intersects()
          + getFrontBound()
          + getBackBound()
          + getLeftBound()
          + getRightBound()
          + getTopBound()
          + getBottomBound()
          + getAnchor()
          + getProperties()
          + getType()
          + broadPhaseWith()
          + clone()
          + toString()
      }
    }
  }
  

  package world {
    package world.bounding {
      abstract class BoundingProperties {
          # r : float
          # g : float
          # b : float
          + BoundingProperties()
          + setColor()
          {abstract} + draw()
          {abstract} + encloses()
          {abstract} + encloses()
          {abstract} + intersects()
          {abstract} + getFrontBound()
          {abstract} + getBackBound()
          {abstract} + getLeftBound()
          {abstract} + getRightBound()
          {abstract} + getTopBound()
          {abstract} + getBottomBound()
          {abstract} + getType()
      }
    }
  }
  

  package world {
    package world.bounding {
      class BoundingSphereProperties {
          - radius : float
          + BoundingSphereProperties()
          + draw()
          + encloses()
          + encloses()
          + intersects()
          + getRadius()
          + getFrontBound()
          + getBackBound()
          + getLeftBound()
          + getRightBound()
          + getTopBound()
          + getBottomBound()
          + getType()
          + toString()
      }
    }
  }
  

  package world {
    package world.bounding {
      class OBBProperties {
          # x : float
          # y : float
          # z : float
          + OBBProperties()
          + draw()
          + encloses()
          + encloses()
          + intersects()
          + getVertices()
          + getFrontBound()
          + getBackBound()
          + getLeftBound()
          + getRightBound()
          + getTopBound()
          + getBottomBound()
          + getType()
          + toString()
      }
    }
  }
  

  AABBProperties -up-|> BoundingProperties
  Bounding o-- Point3D : anchor
  Bounding o-- BoundingProperties : properties
  BoundingSphereProperties -up-|> BoundingProperties
  OBBProperties -up-|> BoundingProperties
  OBBProperties o-- ONB3D : onb


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
